# basic-rest-api-c

./: .gitignore  CMakeLists.txt  CONSIGNA.md  README.md
include/: client.h  common.h  server.h
src/: client.c  server.c
tests/: active.sh  clear.sh  create_incrementers.sh
